[package]
name = "check_in_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = { version = "0.15.7" }
anyhow = "1.0.86"
mongodb = { version = "2.8.2" }
futures = { version = "0.3.30" }
derive_more = "0.99.18"
sqlx-oldapi = { version = "0.6.22", features = ["runtime-tokio-native-tls", "mssql", "decimal", "chrono", "sqlx-macros"] }
actix-web = "4.8.0"
log = "0.4"
log4rs = "1.3.0"

[[bin]]
name = "check_in_service"
path = "src/bin/main.rs"

[lib]
name = "check_in"
path = "src/lib/mod.rs"


[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1